# exact-combinatorics

./: CHANGELOG  LICENSE  README  README.md  TODO  VERSION  combinatorics.cabal  exact-combinatorics.cabal
src/Math/Combinatorics/: Binomial.hs  Factorial.hs  Primes.hs
src/Math/Combinatorics/Exact/: Binomial.hs  Factorial.hs  Primes.hs
test/bench/: combinatorics-bench.cabal
test/bench/Math/Combinatorics/: BinomialBench.hs
test/correctness/: combinatorics-correctness.cabal
test/correctness/Math/Combinatorics/: BinomialTest.hs  FactorialTest.hs
test/experimental/Data/: IntList.hs
