----------------------------------------------------------------
-- wren ng thornton <wren@community.haskell.org>    ~ 2011.12.04
----------------------------------------------------------------

Name:           combinatorics
Version:        0.1.0
Stability:      experimental
Homepage:       http://code.haskell.org/~wren/
Author:         wren ng thornton
Maintainer:     wren@community.haskell.org
Copyright:      Copyright (c) 2011 wren ng thornton
License:        BSD3
License-File:   LICENSE

Category:       Statistics, Math
Synopsis:       Common combinatoric functions.
Description:    Common combinatoric functions.

-- By and large Cabal >=1.2 is fine; but >= 1.6 gives tested-with:
-- and source-repository:.
Cabal-Version:  >= 1.6
-- We need a custom build in order to define __HADDOCK__
Build-Type:     Custom
Tested-With:    GHC == 6.12.1

Source-Repository head
    Type:     darcs
    Location: http://community.haskell.org/~wren/combinatorics

----------------------------------------------------------------
Flag base4
    Default:     True
    Description: base-4.0 emits "Prelude deprecated" messages in
                 order to get people to be explicit about which
                 version of base they use.
Flag splitBase
    Default:     True
    Description: base-3.0 (GHC 6.8) broke out the packages: array,
                 bytestring, containers, directory, old-locale,
                 old-time, packedstring, pretty, process, random.

----------------------------------------------------------------
Library
    Hs-Source-Dirs:  src
    Exposed-Modules: Math.Combinatorics.Primes
                   , Math.Combinatorics.Factorial
                   , Math.Combinatorics.Binomial
    
    if flag(base4)
        Build-Depends: base >= 4 && < 5
    else
        Build-Depends: base < 4

----------------------------------------------------------------
----------------------------------------------------------- fin.
