Cabal-Version:  2.2
-- Cabal >=2.2 is required for:
--    <https://cabal.readthedocs.io/en/latest/cabal-package.html#common-stanzas>
-- Since 2.1, the Cabal-Version must be the absolutely first thing
-- in the file, even before comments.  Also, no longer uses ">=".
--    <https://github.com/haskell/cabal/issues/4899>

----------------------------------------------------------------
-- wren gayle romano <wren@cpan.org>                ~ 2024-08-29
----------------------------------------------------------------

Name:           exact-combinatorics
Version:        0.2.0.14
Build-Type:     Simple
Stability:      experimental
Homepage:       https://wrengr.org/software/hackage.html
Bug-Reports:    https://github.com/wrengr/exact-combinatorics/issues
Author:         wren gayle romano
Maintainer:     wren@cpan.org
Copyright:      2011–2024 wren romano
-- Cabal-2.2 requires us to say "BSD-3-Clause" not "BSD3"
License:        BSD-3-Clause
License-File:   LICENSE

Category:       Statistics, Math
Synopsis:       Efficient exact computation of combinatoric functions.
Description:    Efficient exact computation of combinatoric functions.

Extra-source-files:
    CHANGELOG, README.md

-- This should work as far back as GHC 7.4.1, but we don't verify that by CI.
-- <https://github.com/wrengr/exact-combinatorics/actions?query=workflow%3Aci>
Tested-With:
    GHC ==8.0.2,
    GHC ==8.2.2,
    GHC ==8.4.4,
    GHC ==8.6.5,
    GHC ==8.8.4,
    GHC ==8.10.3,
    GHC ==9.0.1,
    GHC ==9.2.4,
    GHC ==9.4.8,
    GHC ==9.6.5,
    GHC ==9.8.2,
    GHC ==9.10.1

Source-Repository head
    Type:     git
    Location: https://github.com/wrengr/exact-combinatorics.git

----------------------------------------------------------------
Library
    Default-Language: Haskell2010
    Hs-Source-Dirs:  src
    Exposed-Modules: Math.Combinatorics.Exact.Primes
                   , Math.Combinatorics.Exact.Factorial
                   , Math.Combinatorics.Exact.Binomial
    -- Data.IntList

    -- The lower bound is more restrictive than necessary.
    -- But then, we don't maintain any CI tests for older
    -- versions, so these are the lowest bounds we still verify.
    -- <https://gitlab.haskell.org/ghc/ghc/-/wikis/commentary/libraries/version-history>
    Build-Depends: base >= 4.9 && < 5

----------------------------------------------------------------
----------------------------------------------------------- fin.
