----------------------------------------------------------------
-- wren gayle romano <wren@cpan.org>                ~ 2021.10.17
----------------------------------------------------------------

-- Cabal >=1.10 is required by Hackage.
Cabal-Version:  >= 1.10
Build-Type:     Simple

Name:           combinatorics-correctness
Version:        0.1.0
Stability:      experimental
Homepage:       https://wrengr.org/software/hackage.html
Bug-Reports:    https://github.com/wrengr/exact-combinatorics/issues
Author:         wren gayle romano
Maintainer:     wren@cpan.org
Copyright:      Copyright (c) 2011–2021 wren gayle romano
License:        BSD3
License-File:   ../../LICENSE

Category:       Statistics, Math
Synopsis:       Common combinatoric functions.
Description:    Common combinatoric functions.

Tested-With:    GHC == 6.12.1

Source-Repository head
    Type:     git
    Location: https://github.com/wrengr/exact-combinatorics.git

----------------------------------------------------------------
Flag base4
    Default:     True
    Description: base-4.0 emits "Prelude deprecated" messages in
                 order to get people to be explicit about which
                 version of base they use.

----------------------------------------------------------------
Executable test-factorial
    Main-Is:     Math/Combinatorics/FactorialTest.hs
    GHC-Options: -main-is Math.Combinatorics.FactorialTest.main
    GHC-Options: -fforce-recomp

    Build-Depends: combinatorics >= 0.1.0
                 , QuickCheck    >= 2.1.0
                 , smallcheck    >= 0.4

    if flag(base4)
        Build-Depends: base >= 4 && < 5
    else
        Build-Depends: base < 4

----------------------------------------------------------------
Executable test-binomial
    Main-Is:     Math/Combinatorics/BinomialTest.hs
    GHC-Options: -main-is Math.Combinatorics.BinomialTest.main
    GHC-Options: -fforce-recomp

    Build-Depends: combinatorics >= 0.1.0
                 , QuickCheck    >= 2.1.0
                 , smallcheck    >= 0.4

    if flag(base4)
        Build-Depends: base >= 4 && < 5
    else
        Build-Depends: base < 4


----------------------------------------------------------------
----------------------------------------------------------- fin.
